--- a/ioos_catalog/templates/help_download.html
+++ b/ioos_catalog/templates/help_download.html
@@ -211,7 +211,7 @@ nc.variables
         provides clients with the ability to see WMS datasets hosted on a THREDDS
         instance in a proper WMS interface. The nice thing about Godiva is that
         it requires no configuration other than enabling a WMS dataset on the
-        thredds instance, and it has a decent featureset for being a
+        THREDDS instance, and it has a decent featureset for being a
         micro-client. 
       </p>
     </div>
