--- a/ioos_catalog/templates/landing.html
+++ b/ioos_catalog/templates/landing.html
@@ -10,7 +10,7 @@
   <div class="row">
     <div class="col-sm-12 col-md-12 welcome">
       <h1>Welcome</h1>
-      <p>As our eyes on the oceans, coasts, and Great Lakes, the Integrated Ocean Observing System (IOOS®) is a tool for tracking, predicting, managing, and adapting to changes in our marine environment. IOOS® delivers the data and information needed to increase our understanding of our coastal waters so decision makers can take action to improve safety, enhance our economy, and protect our environment. </p>
+      <p>U.S. IOOS is a vital tool for tracking, predicting, managing, and adapting to changes in our ocean, coastal and Great Lakes environment. U.S. IOOS delivers the data and information needed, so that decision-makers can take action to improve safety, enhance the economy, and protect the environment. Explore the interactive features of the new IOOS Data Catalog.</p>
     </div> <!-- welcome -->
   </div> <!-- row -->
   <div class="row img-block">
