Removed null filter type from provider info links
Fixes #208

--- a/ioos_catalog/templates/show_ra.html
+++ b/ioos_catalog/templates/show_ra.html
@@ -76,7 +76,7 @@
           </div>
 
           <div class="col-sm-6">
-            <a href="{{ url_for('datasets', filter_provider=provider, filter_type='null') }}" class="btn btn-success btn-block btn-xl">
+            <a href="{{ url_for('datasets', filter_provider=provider) }}" class="btn btn-success btn-block btn-xl">
               <span class="glyphicon glyphicon-zoom-in"></span>
               Explore Datasets
             </a>
