Fixes #202 misspelling of GCOOS

--- a/ioos_catalog/templates/by_the_numbers.html
+++ b/ioos_catalog/templates/by_the_numbers.html
@@ -189,7 +189,7 @@
               <img class="media-object" src="{{url_for('static', filename='img/logos/gcoos.png')}}" alt="GCOOS">
             </a>
             <div class="media-body">
-              <h3>Gul of Mexico Ocean Observing System (GCOOS)</h3>
+              <h3>Gulf of Mexico Ocean Observing System (GCOOS)</h3>
               <br>
             </div>
             <a class="pull-left" href="{{url_for('show_ra', provider='GLOS')}}">
