Adds 2em margin to header caption on gliders page

--- a/ioos_catalog/templates/gliders.html
+++ b/ioos_catalog/templates/gliders.html
@@ -11,6 +11,7 @@
 
 {% block css %}
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/infographic.css') }}">
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/gliders.css') }}">
 {% endblock %}
 
 {% block page %}
@@ -27,7 +28,7 @@
       </div>
     </div>
     <div class="col-md-9">
-      <div class="caption">
+      <div class="caption caption-header">
         <h3>IOOS Gliders</h3>
         <p>Gliders monitor water currents, temperature, and conditions that reveal effects from storms, impacts on fisheries, and the quality of our water. This information creates a more complete picture of what is happening in the ocean, as well as trends scientists might be able to detect. The robots collect information from deep water, as well as at the surface, at lower cost and less risk than ever before. As scientists deploy more gliders, they are revolutionizing how we observe our ocean. These robots propel us closer to that revolution.</p>
       </div> <!-- caption -->
