--- a/ioos_catalog/templates/show_ra.html
+++ b/ioos_catalog/templates/show_ra.html
@@ -1,4 +1,8 @@
-{% extends "layout.html" %}
+  {% extends "layout.html" %}
+
+{% block css %}
+    <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/show_ra.css') }}">
+{% endblock %}
 
 {% block jumbo %}
 <div class="row">
@@ -27,7 +31,9 @@
   <div class="row">
     <div class="col-sm-8">
       {% if pi.banner %}
-      <img src="{{ pi.banner }}" alt="{{ provider }}" class="img-thumbnail" />
+      <div class="ra-thumbnail">
+        <img src="{{ pi.banner }}" alt="{{ provider }}" />
+      </div>
       {% endif %}
 
       {% if pi.fullname %}
