Adds context to the links on by the numbers

--- a/ioos_catalog/templates/by_the_numbers.html
+++ b/ioos_catalog/templates/by_the_numbers.html
@@ -282,13 +282,31 @@
           </p>
         </div>
         <!-- -->
-        <a data-id='regional' class='list-group-item' href='http://www.ioos.noaa.gov/communications/presentations/welcome.html'>
-          <h4>REGIONAL PLATFORMS</h4>
+        <a data-id='regional' class='list-group-item expandable' href='#'>
+          <h4>
+            REGIONAL PLATFORMS
+            <span class='pull-right glyphicon glyphicon-collapse-down'></span>
+          </h4>
         </a>
+        <div id='regional' class='list-group-item toggle-hide'>
+          <p>
+            The numbers for the regional and national platforms come from several presentations on the 
+            <a href="http://www.ioos.noaa.gov/communications/presentations/welcome.html">IOOS Communications and Presentations Landing Page</a>.
+          </p>
+        </div>
         <!-- -->
-        <a data-id='national' class='list-group-item' href='http://www.ioos.noaa.gov/communications/presentations/welcome.html'>
-          <h4>NATIONAL PLATFORMS</h4>
+        <a data-id='national' class='list-group-item expandable' href='#'>
+          <h4>
+            NATIONAL PLATFORMS
+            <span class='pull-right glyphicon glyphicon-collapse-down'></span>
+          </h4>
         </a>
+        <div id='national' class='list-group-item toggle-hide'>
+          <p>
+            The numbers for the regional and national platforms come from several presentations on the 
+            <a href="http://www.ioos.noaa.gov/communications/presentations/welcome.html">IOOS Communications and Presentations Landing Page</a>.
+          </p>
+        </div>
         <!-- -->
         <a data-id='ioos' class='list-group-item' href='http://ioos.noaa.gov/'>
           <h4>IOOS</h4>
