--- a/ioos_catalog/static/css/ism-style.css
+++ b/ioos_catalog/static/css/ism-style.css
@@ -331,6 +331,11 @@ svg path.dataset.active {
   overflow-x: auto;
 }
 
+.table-view {
+    margin-left: 4%;
+    margin-right: 4%;
+}
+
 .nav-header {
   font-size: 24px;
   text-decoration: none;
