--- a/ioos_catalog/templates/index.html
+++ b/ioos_catalog/templates/index.html
@@ -140,7 +140,10 @@ function updateTypeBtns(srcData, keyFunc, btnContainerSel, urlBase, overviewSel,
 
   // both new and existing hrefs get updated
   svcbtns.attr('href', function(d) {
-    var ltype = (d.key != "All") ? d.key : "null";
+    if (d.key == "All") {
+      return "/" + urlBase + "/filter/";
+    }
+    var ltype = (d.key != "All") ? d.key : "none";
     var rtype = sanitizeServiceUrl(region);
     return '/' + urlBase + '/filter/' + rtype + '/' + ltype;
   });
