--- a/ioos_catalog/templates/catalog_map.html
+++ b/ioos_catalog/templates/catalog_map.html
@@ -83,7 +83,7 @@
   <div id="sidebar-content">
     <div id="filters">
       <select name="filter-provider" class="form-control">
-        <option value="-">-</option>
+        <option value="-">Select a region</option>
         <!-- <option value="null">All</option> -->
         {% for region in regions %}
         <option value={{ region }}>{{region}}</option>
@@ -526,7 +526,7 @@ $(function() {
   if ($("select option[value='" + setVal + "']").length == 1) {
     defaultVal = setVal;
   } else {
-    defaultVal = 'SECOORA';
+    defaultVal = '-';
   }
 
   $('select').val(defaultVal, true).trigger('change');
