Proper case on CeNCOOS

--- a/ioos_catalog/templates/by_the_numbers.html
+++ b/ioos_catalog/templates/by_the_numbers.html
@@ -178,8 +178,8 @@
               <h3>Caribbean Coastal Ocean Observing System (CARICOOS)</h3>
               <br>
             </div>
-            <a class="pull-left" href="{{url_for('show_ra', provider='CENCOOS')}}">
-              <img class="media-object" src="{{url_for('static', filename='img/logos/cencoos.png')}}" alt="CENCOOS">
+            <a class="pull-left" href="{{url_for('show_ra', provider='CeNCOOS')}}">
+              <img class="media-object" src="{{url_for('static', filename='img/logos/cencoos.png')}}" alt="CeNCOOS">
             </a>
             <div class="media-body">
               <h3>The Central and Northern California Ocean Observing System (CeNCOOS)</h3>
