--- a/ioos_catalog/templates/featured_maps.html
+++ b/ioos_catalog/templates/featured_maps.html
@@ -41,10 +41,10 @@
         </div> <!-- list-group-item -->
         <div class="list-group-item media">
           <a class="pull-left" href="http://data.cencoos.org">
-            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/cencoos.png')}}" alt="CENCOOS">
+            <img class="media-object" src="{{url_for('static', filename='img/featured_maps/cencoos.png')}}" alt="CeNCOOS">
           </a>
           <div class="media-body">
-            <h4 class="media-heading">CENCOOS Data Portal</h4>
+            <h4 class="media-heading">CeNCOOS Data Portal</h4>
             This map contains station data from the Californian coast, streaming in real-time with a history of up to seven days.
           </div>
         </div> <!-- list-group-item -->
