--- a/ioos_catalog/templates/edit_service.html
+++ b/ioos_catalog/templates/edit_service.html
@@ -1,34 +1,34 @@
 {% extends "layout.html" %}
 
 {% block page %}
+<div class="container">
+  <h3>Editing <a href="{{ url_for('show_service', service_id=service._id) }}">{{ service.name }}</a></h3>
+  <div class="row">
+    <form class="form-horizontal" method="POST" action="{{ url_for('edit_service_submit', service_id=service._id) }}">
+      {{ form.hidden_tag() }}
 
-<h3>Editing <a href="{{ url_for('show_service', service_id=service._id) }}">{{ service.name }}</a></h3>
+      {% for field in form %}
+        {% if field.name != "csrf_token" %}
+        <div class="control-group">
+          <label class="control-label" for="{{ field.name }}">{{ field.label }}</label>
+          <div class="controls">
+            {{ field() }}
+            {% if field.description %}
+              <span class="help-block">{{ field.description }}</span>
+            {% endif %}
+          </div>
+        </div>
+        {% endif %}
+      {% endfor %}
 
-<div class="row">
-  <form class="form-horizontal" method="POST" action="{{ url_for('edit_service_submit', service_id=service._id) }}">
-    {{ form.hidden_tag() }}
-
-    {% for field in form %}
-      {% if field.name != "csrf_token" %}
       <div class="control-group">
-        <label class="control-label" for="{{ field.name }}">{{ field.label }}</label>
         <div class="controls">
-          {{ field() }}
-          {% if field.description %}
-            <span class="help-block">{{ field.description }}</span>
-          {% endif %}
+          <button type="submit" class="btn btn-primary">Edit Service</button>
+          <a href="{{ url_for('show_service', service_id=service._id) }}" class="btn">Cancel</a>
         </div>
       </div>
-      {% endif %}
-    {% endfor %}
-
-    <div class="control-group">
-      <div class="controls">
-        <button type="submit" class="btn btn-primary">Edit Service</button>
-        <a href="{{ url_for('show_service', service_id=service._id) }}" class="btn">Cancel</a>
-      </div>
-    </div>
-  </form>
+    </form>
+  </div>
 </div>
 
 {% endblock %}
