--- a/ioos_catalog/templates/base.html
+++ b/ioos_catalog/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="UTF-8">
     <title>IOOS Catalog{% if g.title is defined %} - {{ g.title }}{%endif%}</title>
     <script type="text/javascript" src="{{ url_for('.static', filename='js/jquery.min.js') }}"></script>
     <script type="text/javascript" src="{{ url_for('.static', filename='js/bootstrap.js') }}"></script>
