Makes links clickable on /gliders
Fixes #230

--- a/ioos_catalog/templates/gliders.html
+++ b/ioos_catalog/templates/gliders.html
@@ -53,7 +53,7 @@
           <img src="{{url_for('static', filename='img/gliders_page_thumb.png')}}" alt="IOOS Gliders Homepage"></img>
         </a>
         <div class="caption">
-          <h3>IOOS Gliders Homepage</h3>
+          <a href="//www.ioos.noaa.gov/glider/welcome.html"><h3>IOOS Gliders Homepage</h3></a>
           <p>The main IOOS Glider Page provides an overview of glider applications, deployments, and recent workshops and meetings</p>
         </div> <!-- caption -->
       </div> <!-- thumbnail -->
@@ -64,7 +64,7 @@
           <img src="{{url_for('static', filename='img/whitepaper_thumb.png')}}" alt="Glider Whitepaper"></img>
         </a>
         <div class="caption">
-          <h3>Toward an IOOS Underwater Glider Network Plan</h3>
+          <a href="//www.ioos.noaa.gov/glider/strategy/natl_glider_ntwrk_plan_final.pdf"><h3>Toward an IOOS Underwater Glider Network Plan</h3></a>
           <p> The Glider Network White Paper outlines a strategy for using underwater gliders as part of a larger comprehensive three dimensional ocean, coastal, and Great Lakes observing system</p>
         </div> <!-- caption -->
       </div> <!-- thumbnail -->
@@ -75,7 +75,7 @@
           <img src="{{url_for('static', filename='img/catalog_map_thumb.png')}}" alt="Glider Catalog Map"></img>
         </a>
         <div class="caption">
-          <h3>Catalog Glider Map</h3>
+          <a href="{{url_for('catalog_map', filter_provider='Glider_DAC')}}"><h3>Catalog Glider Map</h3></a>
           <p>The IOOS Catalog Map displays IOOS registered datasets and services. Several glider datasets are registered with the IOOS catalog.</p>
         </div> <!-- caption -->
       </div> <!-- thumbnail -->
