Renames Metadata -> Asset Inventory

--- a/ioos_catalog/templates/base.html
+++ b/ioos_catalog/templates/base.html
@@ -55,8 +55,8 @@
                   {% endfor %}
                 </ul>
               </li>
-              <li><a href="{{ url_for('metadatas') }}">Metadata Catalog</a></li>
-              <li><a href="{{ url_for('catalog_map') }}">Catalog Map</a></li>
+              <li><a href="{{ url_for('metadatas') }}">Asset Inventory <span class="label label-info">ALPHA</span></a></li>
+              <li><a href="{{ url_for('catalog_map') }}">Catalog Map </a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li><a href="{{ url_for('help') }}">Help</a></li>
