--- a/ioos_catalog/templates/metadatas.html
+++ b/ioos_catalog/templates/metadatas.html
@@ -3,7 +3,7 @@
 {% block jumbo %}
 <div class="row">
   <div class="col-sm-4">
-    <h3><a href="{{ url_for('metadatas') }}">Metadata</a></h3>
+    <h3><a href="{{ url_for('metadatas') }}">Asset Inventory <span class="label label-info">ALPHA</span></a></h3>
   </div>
   <form class="form-inline">
     <div class="col-sm-8" style="text-align: right;">
