Revamping the landing page

--- a/ioos_catalog/templates/base.html
+++ b/ioos_catalog/templates/base.html
@@ -40,7 +40,7 @@
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Explore <span class="caret"></span></a>
                 <ul class="dropdown-menu" role="menu">
                   <li role="presentation" class="dropdown-header">IOOS Catalog</li>
-                  <li><a href="{{ url_for('dashboard') }}">Dashboard</a></li>
+                  <li><a href="{{ url_for('inventory') }}">Catalog Inventory</a></li>
                   <li><a href="{{ url_for('services') }}">Services</a></li>
                   <li><a href="{{ url_for('datasets') }}">Datasets</a></li>
                   <li><a href="{{ url_for('gliders') }}">Gliders</a></li>
