--- a/ioos_catalog/templates/inventory.html
+++ b/ioos_catalog/templates/inventory.html
@@ -9,7 +9,7 @@
       </div>
 
       <div class="col-lg-6">
-        <h3 style="margin-top: 0px">Explore Services</h3>
+        <h3 style="margin-top: 0px">Catalog Inventory</h3>
 
         <p>1. Pick provider(s) using the dropdown or the map:</p>
 
