--- a/ioos_catalog/templates/by_the_numbers.html
+++ b/ioos_catalog/templates/by_the_numbers.html
@@ -324,12 +324,12 @@
         manuals in-place for IOOS, which describe a comprehensive method for
         QA/QC of oceanographpic data.  The number of datasets available on the
         IOOS catalog are available on the 
-        <a href="{{url_for('index')}}">dashboard</a>. 
+        <a href="{{url_for('inventory')}}">Catalog Inventory</a>. 
         The number of glider days is as of 2013. More information about gliders
         may be found on 
         <a href="{{url_for('gliders')}}">our gliders page</a>.
         Our services number is available on our 
-        <a href="{{url_for('index')}}">dashboard</a>
+        <a href="{{url_for('inventory')}}">Catalog Inventory</a>
         , a service describes an endpoint where clients may obtain either data
         or metadata about oceanographic datasets.
         The number of servers was calculated by totaling the number of
