--- a/ioos_catalog/templates/landing.html
+++ b/ioos_catalog/templates/landing.html
@@ -16,21 +16,21 @@
   <div class="row img-block">
     <div class="col-xs-12 col-md-4 smpadding">
       <div class="img-text">
-        <a href="{{url_for('dashboard')}}">
-          <img class="img-responsive" src="{{url_for('static', filename='img/landing/wave.png')}}" alt="Catalog Dashboard"></img>
-        </a>
-        <div class="overlay">
-          <a href="{{url_for('dashboard')}}">
-            Catalog Dashboard
-          </a>
-        </div>
-      </div>
-      <div class="img-text">
         <a href="{{url_for('gliders')}}">
-          <img class="img-responsive spad" src="{{url_for('static', filename='img/landing/glider.png')}}" alt="Gliders"></img>
+          <img class="img-responsive" src="{{url_for('static', filename='img/landing/glider.png')}}" alt="Gliders"></img>
         </a>
         <div class="overlay">
           Gliders
+        </div>
+      </div>
+      <div class="img-text">
+        <a href="{{url_for('inventory')}}">
+          <img class="img-responsive spad" src="{{url_for('static', filename='img/landing/bathy.png')}}" alt="Featured Maps"></img>
+        </a>
+        <div class="overlay">
+          <a href="{{url_for('featured_maps')}}">
+            Featured Maps
+          </a>
         </div>
       </div>
       <div class="img-text">
@@ -78,11 +78,11 @@
         <div class="col-xs-6 col-md-6 smpadding">
           <div class="img-text">
             <a href="{{url_for('featured_maps')}}">
-              <img class="img-responsive mpad" src="{{url_for('static', filename='img/landing/asset_map.png')}}" alt="Featured Maps"></img>
+              <img class="img-responsive mpad" src="{{url_for('static', filename='img/landing/wave.png')}}" alt="Catalog Inventory"></img>
             </a>
             <div class="overlay overlay-sq">
-              <a href="{{url_for('featured_maps')}}">
-                Featured Maps
+              <a href="{{url_for('inventory')}}">
+                Catalog Inventory
               </a>
             </div> <!-- overlay -->
           </div> <!-- img-text -->
