Adds column success rate to services table

--- a/ioos_catalog/templates/services.html
+++ b/ioos_catalog/templates/services.html
@@ -43,16 +43,16 @@
                 <th>Service Provider</th>
                 <th>Service Type</th>
                 <th>Service Name</th>
-                <th title="The last time a harvest of this service was attempted">Last Harvest Attempt</th>
                 <th title="The status message of the latest harvest attempt">Latest Harvest Status</th>
-                <th>Service Status</th>
+                <th title="The last time a harvest of this service was attempted">Last Harvest Attempt</th>
+                <th>Harvest Success Rate</th>
             </tr>
         </thead>
         {%- for service_group in services|groupby('tld') %}
         <tbody>
             <tr class="hilite">
-              <td colspan="5">{{ service_group.grouper }}</td>
-              <td>{{ tld_stats[service_group.grouper]['ok'] }}/{{ tld_stats[service_group.grouper]['total'] }}</td>
+              <td colspan="5"><b>{{ service_group.grouper }}</b></td>
+              <td><b>Services Available</b><br>{{ tld_stats[service_group.grouper]['ok'] }}/{{ tld_stats[service_group.grouper]['total'] }}</td>
             </tr>
             {%- for service in service_group.list %}
             {%- set ss = service_stats[service._id] %}
@@ -62,7 +62,7 @@
                 <td><a href="{{ url_for('show_service', service_id=service._id) }}">{{ service.name | truncate(40, True) }}</a></td>
                 <td>{{ ss['harvest_status'] | safe }}</td>
                 <td><abbr title="{{ ss['last_update'] | datetimeformat }}">{{ ss['last_update'] | prettydate }}</abbr></td>
-                <td><abbr title="{{ ss['harvest_status'] | safe }}">{{ ss['last_operational_status'] | status_icon | safe }}</abbr></td>
+                <td><abbr title="Blah">{{ ss['harvest_rate'] | safe }}</abbr></td>
             </tr>
             {%- endfor %}
          </tbody>
