Adds dataset truncation method

--- a/ioos_catalog/templates/datasets.html
+++ b/ioos_catalog/templates/datasets.html
@@ -49,8 +49,8 @@
         {%- for d in datasets %}
             <tr>
                 <td>{{d['data_provider'] | safe}}</td>
-                <td>{{d['name'] | safe}}</td>
-                <td><a href="{{ url_for('show_dataset', dataset_id=d['_id']) }}">{{ d.uid }}</a></td>
+                <td>{{d['name'] | truncate(80) | safe}}</td>
+                <td><a href="{{ url_for('show_dataset', dataset_id=d['_id']) }}">{{ d.uid | trim_dataset }}</a></td>
                 <td><abbr title="{{ d['updated'] | datetimeformat }}">{{ d['updated'] | prettydate }}</abbr></td>
             </tr>
         {%- endfor %}
