Added help text and tooltip for compliance score
Fixes #172.  Adds both help text to the FAQ and a "What's this?" text
with tooltip next to compliance score on individual dataset pages.

--- a/ioos_catalog/static/css/ism-style.css
+++ b/ioos_catalog/static/css/ism-style.css
@@ -2,6 +2,10 @@
   max-height: 350px;
 }
 
+.help-tooltip {
+  cursor: help;
+}
+
 tr.hilite>td {
   background-color: #C6D4E1 !important;
   color: #565C61;
